--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -24,6 +24,7 @@
         android:layout_height="25dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="14dp"
+        android:onClick="Contacts_add_btn"
         android:background="@drawable/add_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
