--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="14dp"
         android:background="@drawable/edit_btn"
+        android:onClick="Contacts_add_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
