--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -95,7 +95,7 @@
             android:textSize="16sp" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/SendButton"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/send_btn" />
